crates/jolt_java_syntax/tests/snapshots/corpus__style__program__comment_only_file.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
// file header
/* retained */

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
  Eof "" @ 30..30 leading=[LineComment "// file header", Newline "\n", BlockComment "/* retained */", Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
