crates/jolt_java_syntax/tests/snapshots/corpus__style__program__empty_file.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:


syntax:
syntax:
CompilationUnit
  Eof "" @ 1..1 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
