crates/jolt_java_syntax/tests/snapshots/corpus__style__program__final_newline.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
class A {}

syntax:
syntax:
CompilationUnit
  ImportDeclarationList
  CompilationUnitDeclarationList
    ClassDeclaration
      ClassKw "class" @ 0..5 trailing=[Whitespace " "]
      Identifier "A" @ 6..7 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 8..9
        ClassBodyMemberList
        RBrace "}" @ 9..10
  Eof "" @ 11..11 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
