crates/jolt_java_syntax/tests/snapshots/corpus__style__program__formatter_ignore_trailing_markers.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
class FormatterIgnoreTrailingMarkers {
  void  before(){ int value= 0; } // @formatter:off
  void  inside(){ int value= 0; } // @formatter:on
}

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    ClassDeclaration
      ClassKw "class" @ 0..5 trailing=[Whitespace " "]
      Identifier "FormatterIgnoreTrailingMarkers" @ 6..36 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 37..38
        ClassBodyMemberList
          MethodDeclaration
            VoidType
              VoidKw "void" @ 41..45 leading=[Newline "\n", Whitespace "  "] trailing=[Whitespace "  "]
            Identifier "before" @ 47..53
            LParen "(" @ 53..54
            RParen ")" @ 54..55
            Block
              LBrace "{" @ 55..56 trailing=[Whitespace " "]
              BlockStatementList
                BlockStatement
                  LocalVariableDeclaration
                    ParameterModifierList
                    PrimitiveType
                      AnnotationList
                      IntKw "int" @ 57..60 trailing=[Whitespace " "]
                    VariableDeclaratorList
                      VariableDeclarator
                        Identifier "value" @ 61..66
                        Assign "=" @ 66..67 trailing=[Whitespace " "]
                        VariableInitializer
                          LiteralExpression
                            IntegerLiteral "0" @ 68..69
                  Semicolon ";" @ 69..70 trailing=[Whitespace " "]
              RBrace "}" @ 71..72 trailing=[Whitespace " ", LineComment "// @formatter:off"]
          MethodDeclaration
            VoidType
              VoidKw "void" @ 93..97 leading=[Newline "\n", Whitespace "  "] trailing=[Whitespace "  "]
            Identifier "inside" @ 99..105
            LParen "(" @ 105..106
            RParen ")" @ 106..107
            Block
              LBrace "{" @ 107..108 trailing=[Whitespace " "]
              BlockStatementList
                BlockStatement
                  LocalVariableDeclaration
                    ParameterModifierList
                    PrimitiveType
                      AnnotationList
                      IntKw "int" @ 109..112 trailing=[Whitespace " "]
                    VariableDeclaratorList
                      VariableDeclarator
                        Identifier "value" @ 113..118
                        Assign "=" @ 118..119 trailing=[Whitespace " "]
                        VariableInitializer
                          LiteralExpression
                            IntegerLiteral "0" @ 120..121
                  Semicolon ";" @ 121..122 trailing=[Whitespace " "]
              RBrace "}" @ 123..124 trailing=[Whitespace " ", LineComment "// @formatter:on"]
        RBrace "}" @ 142..143 leading=[Newline "\n"]
  Eof "" @ 144..144 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
